# substreams-sink-examples

./: .gitignore  README.md  package-lock.json
go/: .gitignore  README.md  go.mod  go.sum  main.go
go/basic/: README.md  go.mod
javascript/: README.md
javascript/node/: .gitignore  README.md  cursor  cursor.js  error.js  handlers.js  index.js  package-lock.json  package.json
javascript/web/: README.md  cursor.js  error.js  handlers.js  index.html  index.js  main.js  package-lock.json  package.json  util.js
python/: README.md  buf.gen.yaml  cursor.yml  main.py  pyproject.toml
python/proto/sf/solana/spl/token/v1/: spl_token.proto
python/proto/sf/solana/type/v1/: account.proto
python/proto/sf/substreams/solana/type/v1/: account.proto
python/sf/firehose/v2/: firehose_pb2.py  firehose_pb2_grpc.py
python/sf/solana/spl/token/v1/: spl_token_pb2.py
python/sf/solana/type/v1/: account_pb2.py
python/sf/substreams/: options_pb2.py
python/sf/substreams/index/v1/: keys_pb2.py
python/sf/substreams/rpc/v2/: service_pb2.py  service_pb2_grpc.py
python/sf/substreams/sink/service/v1/: service_pb2.py  service_pb2_grpc.py
python/sf/substreams/solana/type/v1/: account_pb2.py
python/sf/substreams/v1/: clock_pb2.py  deltas_pb2.py  modules_pb2.py  package_pb2.py
rust/: README.md
rust/src/: main.rs  substreams.rs  substreams_stream.rs
subgraph-triggers/: README.md
subgraph-triggers/cosmos-usdt-exchange-volume/: README.md  injective-usdt-volume-v0.1.0.spkg  package-lock.json  package.json  schema.graphql  subgraph.yaml  substreams.yaml  (+1 more)
typescript/: README.md
(+579 files in other folders)
